Fix post list card height and flex-wrap

--- a/app/assets/stylus/widgets/card.styl
+++ b/app/assets/stylus/widgets/card.styl
@@ -15,14 +15,12 @@
             max-width 100%
 
 .card
+    height 325px
     margin 0 auto 10px
     max-width 400px
     padding $card-box-padding-above $card-box-padding-aside
     text-decoration none
     width 100%
-
-    @media screen and ( min-width $screen-sm )
-        height 325px
 
     @media screen and ( min-width $screen-md )
         margin 0 10px 10px 0
